--- a/package.json
+++ b/package.json
@@ -6,17 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "kysely-codegen --dialect=postgres --out-file=./lib/db.d.ts"
   },
   "license": "MIT",
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.16.0",
+    "@tanstack/react-virtual": "^3.2.1",
+    "@vercel/blob": "^0.22.3",
+    "@vercel/kv": "^1.0.1",
+    "@vercel/postgres": "^0.8.0",
+    "@vercel/postgres-kysely": "^0.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "kysely": "^0.27.3",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
@@ -29,6 +38,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "kysely-codegen": "^0.14.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
